--- a/ui/peers.ui
+++ b/ui/peers.ui
@@ -28,6 +28,9 @@
      <property name="showGrid">
       <bool>false</bool>
      </property>
+     <property name="gridStyle">
+      <enum>Qt::SolidLine</enum>
+     </property>
      <property name="sortingEnabled">
       <bool>true</bool>
      </property>
