Redimmensionnement de toutes les QTableWidget Dimensionnement dynamique (en %) lors des resizeEvent

--- a/ui/tabresult.ui
+++ b/ui/tabresult.ui
@@ -68,7 +68,7 @@
      </column>
      <column>
       <property name="text">
-       <string>Dernière modification</string>
+       <string>Dernière modif.</string>
       </property>
      </column>
      <column>
