--- a/ui/downloads.ui
+++ b/ui/downloads.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>374</width>
+    <width>385</width>
     <height>408</height>
    </rect>
   </property>
@@ -192,35 +192,35 @@
        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
       </property>
       <item row="0" column="0">
-       <widget class="QLabel" name="label_13">
+       <widget class="QLabel" name="name_label">
         <property name="text">
          <string>Nom :</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_14">
+       <widget class="QLabel" name="path_label">
         <property name="text">
          <string>Chemin local :</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_15">
+       <widget class="QLabel" name="url_label">
         <property name="text">
          <string>URL :</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
-       <widget class="QLabel" name="label_16">
+       <widget class="QLabel" name="size_label">
         <property name="text">
          <string>Taille :</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
-       <widget class="QLabel" name="label_17">
+       <widget class="QLabel" name="progress_label">
         <property name="text">
          <string>Avancement :</string>
         </property>
