--- a/ui/downloads.ui
+++ b/ui/downloads.ui
@@ -220,11 +220,37 @@
        </widget>
       </item>
       <item row="4" column="0">
-       <widget class="QLabel" name="progress_label">
-        <property name="text">
-         <string>Avancement :</string>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMaximumSize</enum>
         </property>
-       </widget>
+        <item>
+         <widget class="QLabel" name="progress_label">
+          <property name="text">
+           <string>Avancement :</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QProgressBar" name="progressBar">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="value">
+           <number>24</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
