Amélioration TabShares (on activation).

--- a/ui/shares.ui
+++ b/ui/shares.ui
@@ -22,6 +22,9 @@
        <height>0</height>
       </size>
      </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
      <property name="gridStyle">
       <enum>Qt::SolidLine</enum>
      </property>
