--- a/ui/peers.ui
+++ b/ui/peers.ui
@@ -13,6 +13,9 @@
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QTableWidget" name="table_peers">
+     <property name="focusPolicy">
+      <enum>Qt::WheelFocus</enum>
+     </property>
      <property name="autoScroll">
       <bool>false</bool>
      </property>
